--- a/Analisando_os_Dados_do_Airbnb_(Porto_Portugal).ipynb
+++ b/Analisando_os_Dados_do_Airbnb_(Porto_Portugal).ipynb
@@ -83,7 +83,7 @@
       },
       "source": [
         "# importar o arquivo listings.csv para um DataFrame\n",
-        "df = pd.read_csv(\"/content/drive/MyDrive/Colab Notebooks/Projec_ArbNb/listings.csv\")"
+        "df = pd.read_csv("https://raw.githubusercontent.com/rgolino/Data_Analytic_Airbnb/main/listings.csv")"
       ],
       "execution_count": null,
       "outputs": []
