--- a/Analisando_os_Dados_do_Airbnb_(Porto_Portugal).ipynb
+++ b/Analisando_os_Dados_do_Airbnb_(Porto_Portugal).ipynb
@@ -73,7 +73,7 @@
         "\n",
         "%matplotlib inline"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -83,9 +83,9 @@
       },
       "source": [
         "# importar o arquivo listings.csv para um DataFrame\n",
-        "df = pd.read_csv("https://raw.githubusercontent.com/rgolino/Data_Analytic_Airbnb/main/listings.csv")"
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/rgolino/Data_Analytic_Airbnb/main/listings.csv\")"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
